[package]
name = "rtc-interval"
version = "0.1.0"
edition = "2024"
authors = ["Serhij S. <div@altertech.com>"]
license = "MIT"
description = "Wall clock synchronized interval timers"
repository = "https://github.com/eva-ics/rtc-interval"
keywords = ["rtc", "interval"]
readme = "README.md"

[dependencies]
bma-ts = "0.2.5"
rtsc = "0.4.4"
tokio = { version = "1", optional = true, features = ["time"] }

[features]
default = ["async"]
async = ["dep:tokio"]

[dev-dependencies]
bma-ts = "0.2.5"
tokio = { version = "1", features = ["rt", "time"] }
